--- a/menu.ui
+++ b/menu.ui
@@ -155,7 +155,7 @@
     <string notr="true"/>
    </property>
    <property name="text">
-    <string>帳號</string>
+    <string/>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
