--- a/selectmusic.ui
+++ b/selectmusic.ui
@@ -22,11 +22,11 @@
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="2,10,1,0">
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="2,10,0">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,0">
      <item>
-      <widget class="QTextEdit" name="queryText">
+      <widget class="QPlainTextEdit" name="queryText">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Ignored">
          <horstretch>0</horstretch>
@@ -48,25 +48,7 @@
     <widget class="QListView" name="searchResultView"/>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QPushButton" name="prevButton">
-       <property name="text">
-        <string>Prev Page</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="nextButton">
-       <property name="text">
-        <string>Next Page</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="selectMusicButton">
      <property name="text">
       <string>Select</string>
      </property>
