--- a/resource.qrc
+++ b/resource.qrc
@@ -5,5 +5,6 @@
     <file>sources/images/about2.png</file>
     <file>sources/images/about3.png</file>
     <file>sources/images/about4.png</file>
+    <file>sources/images/crown.png</file>
 </qresource>
 </RCC>
