--- a/scoreboard.ui
+++ b/scoreboard.ui
@@ -67,7 +67,7 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>280</x>
      <y>530</y>
      <width>67</width>
      <height>31</height>
@@ -88,7 +88,7 @@
   <widget class="QSlider" name="beatVolumn">
    <property name="geometry">
     <rect>
-     <x>580</x>
+     <x>610</x>
      <y>530</y>
      <width>160</width>
      <height>31</height>
@@ -132,7 +132,7 @@
   <widget class="QSlider" name="musicVolumn">
    <property name="geometry">
     <rect>
-     <x>330</x>
+     <x>360</x>
      <y>530</y>
      <width>160</width>
      <height>31</height>
@@ -151,7 +151,7 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>500</x>
+     <x>530</x>
      <y>530</y>
      <width>67</width>
      <height>31</height>
@@ -249,7 +249,7 @@
     <rect>
      <x>120</x>
      <y>460</y>
-     <width>621</width>
+     <width>651</width>
      <height>51</height>
     </rect>
    </property>
@@ -261,7 +261,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>360</y>
+     <y>340</y>
      <width>51</width>
      <height>51</height>
     </rect>
@@ -434,7 +434,34 @@
     <string>離開</string>
    </property>
   </widget>
+  <widget class="QtCharts::QChartView" name="scoresChartView">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>80</y>
+     <width>371</width>
+     <height>192</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QtCharts::QChartView" name="timeChartView">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>290</y>
+     <width>651</width>
+     <height>151</height>
+    </rect>
+   </property>
+  </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QtCharts::QChartView</class>
+   <extends>QGraphicsView</extends>
+   <header location="global">qchartview.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="resource.qrc"/>
  </resources>
